--- a/pages/pages/upgrade.html
+++ b/pages/pages/upgrade.html
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Contato</a>
+                            <a class="nav-link" href="../contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
